[tool.poetry]
name = "app"
version = "0.1.0"
description = "The backend of Felipe and Wendy site"
authors = ["Felipe Markson <fmarkson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.x"
fastapi = "0.75.X"
motor = "2.5.x"
mercadopago = "1.x"
python-dotenv = "0.20.x"
uvicorn = "^0.17.6"
dnspython = "^2.2.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
